# Portfolio-Recent

./: README.md
01-Agents/: .env.example  .gitignore  README.md  a2a_protocol.py  ai_agents_chatbots_agents_memory.py  memory_management_langchain_and_langgraph.py  model_context_protocol_fastmcp_server.py  model_context_protocol_mcp_filesystem.py  multi-agent-collaboration.py  react_langchain.py  requirements.txt  routing_langchain.py  self-reflection-agent-langchain.py  self-reflection-agent-langgraph.py  self_reflection_langchain_iterative.py  self_reflection_openai_agents_framework.py  tool_use_langchain_search.py
02-RAG/: RAG_Langchain.py  README.md  agentic_rag_gradio_app.py  rag_advanced_langchain_faiss_llama.py  rag_agentic_app_crewai_llama.py  rag_langgraph_weaviate_gemini.py
02-RAG/rag_vertex_ai/: .env.example  README.md  pyproject.toml
02-RAG/rag_vertex_ai/eval/: harness.py  queries.yaml
02-RAG/rag_vertex_ai/examples/: answer_question.py
02-RAG/rag_vertex_ai/src/rag_vertex/: __init__.py  client.py  settings.py
02-RAG/rag_vertex_ai/tests/: test_answer_question.py  test_client.py
03-LLM-Fine-Tuning/: README.md
04-Prompt-Engineering/: Gemini_APIs_pprint.ipynb
05-Prompt-Engineering/: README.md  comparison.py  requirements.txt
07-BoW-Models/: README.md  model_knn.py  model_logistic_regression.py  model_random_forest.py  model_svm.py  model_voting.py  model_xgboost.py  orchestrator.py  requirements.txt
08-Keyword-Extraction/: extract_basic_keywords_from_text.py
09-BoW-Models/: model_naive_bayes.py  model_stacking.py  utils.py
(+136 files in other folders)
